<resources>
    <string name="app_name">My Obra</string>

    <string name="navigation_drawer_open">Abrir menú de navegación</string>
    <string name="navigation_drawer_close">Cerrar menú de navegación</string>

    <string name="nav_header_title">My Obra</string>
    <string name="nav_header_subtitle">Aplicación de construcción y topografía</string>
    <string name="nav_header_desc">Encabezado del menú de navegación</string>

    <string name="action_settings">Configuración</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_topo">Topografía</string>
    <string name="menu_info">Información</string>
    <string name="menu_cimiento">Cimientos</string>
    <string name="menu_muro">Muros</string>
    <string name="menu_columna">Columnas</string>
    <string name="menu_sobrecimiento">Sobrecimientos</string>
    <string name="menu_zapata">Zapatas</string>
    <string name="menu_piso">Pisos</string>
    <string name="menu_viga">Vigas</string>
    <string name="menu_losa">Losas</string>



    <string name="hello_blank_fragment">Hola fragmento en blanco</string>
</resources>
