<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_home"
                android:title="@string/menu_home"/>

        <item
                android:id="@+id/nav_topo"
                android:icon="@drawable/ic_topo"
                android:title="@string/menu_topo"/>
        <item
                android:id="@+id/nav_calculos"
                android:title="Cálculos Materiales">

            <menu>
                <item
                        android:id="@+id/nav_calc_zapata"
                        android:title="@string/menu_zapata"/>
                <item
                        android:id="@+id/nav_calc_cimiento"
                        android:title="@string/menu_cimiento"/>
                <item
                        android:id="@+id/nav_calc_sobrecimiento"
                        android:title="@string/menu_sobrecimiento"/>
                <item
                        android:id="@+id/nav_calc_muro"
                        android:title="@string/menu_muro"/>
                <item
                        android:id="@+id/nav_calc_piso"
                        android:title="@string/menu_piso"/>
                <item
                        android:id="@+id/nav_calc_columna"
                        android:title="@string/menu_columna"/>
                <item
                        android:id="@+id/nav_calc_viga"
                        android:title="@string/menu_viga"/>
                <item
                        android:id="@+id/nav_calc_losa"
                        android:title="@string/menu_losa"/>
            </menu>
        </item>
        <item
                android:id="@+id/nav_info"
                android:icon="@drawable/ic_info"
                android:title="@string/menu_info"/>

    </group>
</menu>