<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@+id/nav_home">

    <fragment
            android:id="@+id/nav_home"
            android:name="com.uchicn.myobra.ui.home.HomeFragment"
            android:label="@string/menu_home"
            tools:layout="@layout/fragment_home"/>

    <fragment
            android:id="@+id/nav_topo"
            android:name="com.uchicn.myobra.ui.topniv.TopNivFragment"
            android:label="@string/menu_topo"
            tools:layout="@layout/fragment_top_niv"/>
    <fragment
            android:id="@+id/nav_calc_cimiento"
            android:name="com.uchicn.myobra.ui.cimientos.CimientoFragment"
            android:label="@string/menu_cimiento"
            tools:layout="@layout/fragment_cimiento"/>
    <fragment
            android:id="@+id/nav_calc_muro"
            android:name="com.uchicn.myobra.ui.muro.MuroFragment"
            android:label="@string/menu_muro"
            tools:layout="@layout/fragment_muro"/>
    <fragment
            android:id="@+id/nav_calc_columna"
            android:name="com.uchicn.myobra.ui.columna.ColumnaFragment"
            android:label="@string/menu_columna"
            tools:layout="@layout/fragment_columna"/>
    <fragment
            android:id="@+id/nav_calc_losa"
            android:name="com.uchicn.myobra.ui.losa.LosaFragment"
            android:label="@string/menu_losa"
            tools:layout="@layout/fragment_losa"/>
    <fragment
            android:id="@+id/nav_calc_sobrecimiento"
            android:name="com.uchicn.myobra.ui.sobrecimiento.SobrecimientoFragment"
            android:label="@string/menu_sobrecimiento"
            tools:layout="@layout/fragment_sobrecimiento"/>
    <fragment
            android:id="@+id/nav_calc_viga"
            android:name="com.uchicn.myobra.ui.viga.VigaFragment"
            android:label="@string/menu_viga"
            tools:layout="@layout/fragment_viga"/>
    <fragment
            android:id="@+id/nav_calc_piso"
            android:name="com.uchicn.myobra.ui.piso.PisoFragment"
            android:label="@string/menu_piso"
            tools:layout="@layout/fragment_piso"/>
    <fragment
            android:id="@+id/nav_calc_zapata"
            android:name="com.uchicn.myobra.ui.zapata.ZapataFragment"
            android:label="@string/menu_zapata"
            tools:layout="@layout/fragment_zapata"/>


    <fragment
            android:id="@+id/nav_info"
            android:name="com.uchicn.myobra.ui.info.InfoFragment"
            android:label="@string/menu_info"
            tools:layout="@layout/fragment_info"/>
</navigation>